<?xml version="1.0"?>
<package>
  <name>d435_description</name>
  <version>0.0.0</version>
  <description>
     Realsense D435 description
  </description>
  <author email="ivo.vatavuk@fer.hr">Ivo Vatavuk</author>
  <maintainer email="ivo.vatavuk@fer.hr">Ivo Vatavuk</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>

</package>
