<?xml version="1.0"?>
<package>
  <name>viv_description</name>
  <version>0.0.0</version>
  <description>
     viv description
  </description>
  <author email="ivo.vatavuk@fer.hr">Ivo Vatavuk</author>
  <maintainer email="ivo.vatavuk@fer.hr">Ivo Vatavuk</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>

</package>
