<?xml version="1.0"?>
<package>
  <name>viv_gazebo</name>
  <version>0.0.0</version>
  <description>
     viv gazebo
  </description>
  <author email="ivo.vatavuk@fer.hr">Ivo Vatavuk</author>
  <maintainer email="ivo.vatavuk@fer.hr">Ivo Vatavuk</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>viv_description</run_depend>
  <run_depend>viv_control</run_depend>

  <export>
  </export>

</package>
