<?xml version="1.0"?>
<package>
  <name>viv_navigation</name>
  <version>0.6.5</version>
  <description>Viv navigation</description>
  <author email="todo@todo.com">todo</author>

  <maintainer email="todo@todo.com">todo</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <!-- Disabling till package is released -->
  <!-- <run_depend>frontier_exploration</run_depend> -->
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <!--run_depend>navfn</run_depend-->
  <run_depend>base_local_planner</run_depend>
  <run_depend>dwa_local_planner</run_depend>

  <export>
  </export>
</package>
